tests/NormalTests/paczka2/big_fuzzy/64614589.err
Error in line 1: 3h1CI%A102%81,1
Error in line 11: 3h1CI A102 31,6
Error in line 31: 3h1CI A428 37,4
Error in line 43: 4barSnWiL S305 50,6
Error in line 51: 3h1CI A388 258,6
Error in line 60: 1y6UElbU A388 70,8
Error in line 63: IkLX2xHnQd0 A102 256,46
Error in line 56: IkLX2xHnQd0 A102 79,2
Error in line 53: vIF1qY8 A388 22,0
Error in line 75: vIF1qY8 A428 72,21
Error in line 92: 3h1CI A102 12,7
Error in line 89: IkLX2xHnQd0 A428 14,8
Error in line 95: IkLX2xHnQd0 A388 3,4
Error in line 102: S305 A388 24,5
Error in line 116: HJhKkEnb A428 168,7
Error in line 108: 4barSnWiL A428 2,4
Error in line 118: IkLX2xHnQd0 A388 45,0
Error in line 125: 3h1CI A388 97,2
Error in line 129: 3h1CI A428 3,0
Error in line 132: 3h1CI A102 6,4
Error in line 141: 3h1CI A102 39,1
Error in line 149: vIF1qY8 A1<2 67,5
Error in line 150: IkLX2xHnQd0 A102 70,9
Error in line 153: IkLX2xHnQd0 A388 30,3
Error in line 164: IkLX2xHnQd0 A428 23,4
Error in line 163: HJhKkEnb A102 72,5
Error in line 144: S305 A388 94,7
Error in line 180: S305 S305 48,1
Error in line 152: vIF1qY8 A102 66,2
Error in line 172: HJhKkEnb A428 95,9
Error in line 182: 1y6UElbU A102 9,0
Error in line 188: 1y6UElbU S305 5,8
Error in line 215: 1y6UElbU A428 90,7
Error in line 225: HJhKkEnb A102 75,7
Error in line 222: S305 S305 25,4
Error in line 236: S305 A102 75,4
Error in line 219: IkLX2xHnQd0 S305 67,8
